--- a/index.html
+++ b/index.html
@@ -84,60 +84,92 @@
     </section>
 
     <!-- PROJETOS -->
-    <section id="projetos" class="section">
-      <div class="section-head">
-        <h2>Projetos</h2>
-        <p>Trabalhos desenvolvidos para clientes e projetos acadêmicos.</p>
+   <section id="projetos" class="section">
+  <div class="section-head">
+    <h2>Projetos</h2>
+    <p>Organizados por categoria técnica e aplicação prática.</p>
+  </div>
+
+  <!-- SISTEMAS WEB -->
+  <h3 style="margin-top:40px;">Sistemas Web</h3>
+  <div class="grid three">
+    <article class="card project">
+      <div class="project-top">
+        <h3>Sistema de Gestão Comercial Web</h3>
+        <span class="pill">Aplicação Completa</span>
       </div>
-
-      <div class="grid three">
-
-        <!-- FULL STACK -->
-        <article class="card project">
-          <div class="project-top">
-            <h3>Sistema Web Full Stack</h3>
-            <span class="pill">Front-End + Back-End</span>
-          </div>
-          <p>
-            Sistema completo desenvolvido com integração entre front-end e back-end,
-            incluindo autenticação de usuários, banco de dados e API.
-          </p>
-          <div class="project-links">
-            <a class="link" href="#" target="_blank">Código</a>
-          </div>
-        </article>
-
-        <!-- CLIENTE -->
-        <article class="card project">
-          <div class="project-top">
-            <h3>Sistema de Gestão Comercial</h3>
-            <span class="pill">Aplicação Web</span>
-          </div>
-          <p>
-            Sistema desenvolvido para cliente do segmento varejista, focado
-            no controle de vendas, estoque e cadastro de clientes.
-          </p>
-          <div class="project-links">
-            <a class="link" href="#" target="_blank">Detalhes</a>
-          </div>
-        </article>
-
-        <!-- SITE -->
-        <article class="card project">
-          <div class="project-top">
-            <h3>Site Institucional Comercial</h3>
-            <span class="pill">Responsivo</span>
-          </div>
-          <p>
-            Site moderno desenvolvido para presença digital e captação de clientes.
-          </p>
-          <div class="project-links">
-            <a class="link" href="#" target="_blank">Demo</a>
-          </div>
-        </article>
-
+      <p>
+        Sistema com controle de vendas, estoque, histórico e caixa diário.
+        Implementação de persistência de dados, lógica de negócio e impressão ESC/POS.
+      </p>
+      <div class="project-links">
+        <span class="link">Código sob solicitação</span>
       </div>
-    </section>
+    </article>
+  </div>
+
+  <!-- PROJETOS COMERCIAIS -->
+  <h3 style="margin-top:50px;">Projetos Comerciais</h3>
+  <div class="grid three">
+    <article class="card project">
+      <div class="project-top">
+        <h3>Site Institucional Responsivo</h3>
+        <span class="pill">Front-End</span>
+      </div>
+      <p>
+        Website desenvolvido com foco em presença digital, responsividade
+        e conversão de clientes.
+      </p>
+    </article>
+
+    <article class="card project">
+      <div class="project-top">
+        <h3>Sistema para Comércio Local</h3>
+        <span class="pill">Aplicação Web</span>
+      </div>
+      <p>
+        Aplicação desenvolvida para controle de vendas e organização comercial.
+      </p>
+    </article>
+  </div>
+
+  <!-- PROJETOS ACADÊMICOS -->
+  <h3 style="margin-top:50px;">Projetos Acadêmicos</h3>
+  <div class="grid three">
+    <article class="card project">
+      <div class="project-top">
+        <h3>Modelagem de Banco de Dados</h3>
+        <span class="pill">MySQL</span>
+      </div>
+      <p>
+        Modelagem lógica e física de banco de dados,
+        incluindo estrutura relacional e normalização.
+      </p>
+    </article>
+
+    <article class="card project">
+      <div class="project-top">
+        <h3>Programação Orientada a Objetos</h3>
+        <span class="pill">POO</span>
+      </div>
+      <p>
+        Aplicação de conceitos de encapsulamento,
+        abstração, herança e polimorfismo.
+      </p>
+    </article>
+
+    <article class="card project">
+      <div class="project-top">
+        <h3>Fundamentos de IoT</h3>
+        <span class="pill">Internet das Coisas</span>
+      </div>
+      <p>
+        Projetos envolvendo integração de dispositivos,
+        lógica computacional e fundamentos de sistemas embarcados.
+      </p>
+    </article>
+  </div>
+</section>
 
     <!-- CONTATO -->
     <section id="contato" class="section">
