--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 
   <main class="container">
     <section class="hero">
-      <div class="badge">Disponível para freelas</div>
+      <div class="badge"><I>FREELANCER</I></div>
       <h1>Eu construo experiências web <span class="grad">modernas</span> e objetivas.</h1>
       <p class="subtitle">
-        Sou <strong>Carol Gonçalves</strong>, desenvolvedora especializada em criação de sistemas comerciais e sites modernos
-        para pequenos e médios negócios. Meu foco é entregar soluções funcionais, rápidas e que aumentem os resultados do cliente.
+        Olá sou a  <strong>Carol</strong>, desenvolvedora especializada em criação de sistemas comerciais e sites modernos
+        para pequenos e médios negócios.
+        <br>
+        Meu foco é entregar soluções funcionais, rápidas e que aumentem os resultados do cliente.
       </p>
 
       <div class="actions">
