--- a/index.html
+++ b/index.html
@@ -11,9 +11,23 @@
   <div class="bg"></div>
 
   <header class="container header">
-    <a class="logo" href="#top" id="top" aria-label="Início">
-      <span class="dot"></span> Carol Gonçalves
-    </a>
+  <a class="logo logo-video" href="#top" id="top" aria-label="Início">
+  <span class="dot"></span>
+
+  <span class="name-video">
+    <video
+      class="name-bg"
+      autoplay
+      muted
+      loop
+      playsinline
+      preload="metadata">
+      <source src="assets/intro.mp4" type="video/mp4" />
+    </video>
+
+    <span class="name-text">Carol Dev</span>
+  </span>
+</a>
 
     <nav class="nav">
       <a href="#sobre">Sobre</a>
