--- a/index.html
+++ b/index.html
@@ -12,34 +12,26 @@
 
   <header class="container header">
 <header class="container header big-logo-header">
+  <a class="logo logo-video-text" href="#top" id="top" aria-label="Início">
+  <span class="dot"></span>
 
-  <svg class="logo-hero" viewBox="0 0 1200 200">
+  <svg class="logo-svg" viewBox="0 0 400 80">
     <defs>
-      <mask id="mask-text">
-        <rect width="100%" height="100%" fill="black"></rect>
-        <text x="50%" y="65%" text-anchor="middle" class="logo-text-mask" fill="white">
+      <mask id="text-mask">
+        <rect width="100%" height="100%" fill="black" />
+        <text x="50%" y="60%" text-anchor="middle" class="logo-mask-text" fill="white">
           Carol.Dev
         </text>
       </mask>
     </defs>
 
-    <foreignObject x="0" y="0" width="100%" height="100%" mask="url(#mask-text)">
-      <video
-        autoplay
-        muted
-        loop
-        playsinline
-        preload="metadata"
-        class="logo-video-bg">
+    <foreignObject x="0" y="0" width="100%" height="100%" mask="url(#text-mask)">
+      <video autoplay muted loop playsinline class="logo-video">
         <source src="assets/logo.mp4" type="video/mp4" />
       </video>
     </foreignObject>
-
-    <text x="50%" y="65%" text-anchor="middle" class="logo-stroke">
-      Carol.Dev
-    </text>
   </svg>
-
+</a>
 </header>
 
 
